internal/xds/translator/testdata/out/xds-ir/ext-auth-recomputation.routes.yaml
- ignorePortInHostMatching: true
  name: default/gateway-1/http
  virtualHosts:
  - domains:
    - www.foo.com
    name: default/gateway-1/http/www_foo_com
    routes:
    - match:
        pathSeparatedPrefix: /foo1
      name: httproute/default/httproute-1/rule/0/match/0/www_foo_com
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.ext_authz/bbb535779998b129:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
          checkSettings:
            grpcService:
              envoyGrpc:
                authority: primary.foo.com
                clusterName: securitypolicy/default/policy-for-http-route-1/default/grpc-backend
              timeout: 10s
    - match:
        pathSeparatedPrefix: /foo2
      name: httproute/default/httproute-1/rule/1/match/0/www_foo_com
      route:
        cluster: httproute/default/httproute-1/rule/1
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.ext_authz/bbb535779998b129:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
          checkSettings:
            grpcService:
              envoyGrpc:
                authority: primary.foo.com
                clusterName: securitypolicy/default/policy-for-http-route-1/default/grpc-backend
              timeout: 10s
  - domains:
    - www.bar.com
    name: default/gateway-1/http/www_bar_com
    routes:
    - match:
        pathSeparatedPrefix: /bar
      name: httproute/default/httproute-2/rule/0/match/0/www_bar_com
      route:
        cluster: httproute/default/httproute-2/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.ext_authz/3ead71a2fb2e5b82:
          '@type': type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
          checkSettings:
            httpService:
              authorizationResponse:
                allowedUpstreamHeaders:
                  patterns:
                  - exact: header1
                    ignoreCase: true
                  - exact: header2
                    ignoreCase: true
              pathPrefix: /auth
              serverUri:
                cluster: securitypolicy/default/policy-for-gateway-1/envoy-gateway/http-backend
                timeout: 10s
                uri: http://primary.foo.com/auth
